# PluginDevHelper-MCDR

./: .gitignore  README.md  mcdreforged.plugin.json  pyproject.toml
git_auto_reload/: __init__.py  command.py  config.py  git_control.py
resources/: config.yml  config.zh_cn.yml  repos.yml  repos.zh_cn.yml
